--- a/TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer.csproj
+++ b/TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer/Trados.TargetRenamer.csproj
@@ -12,8 +12,8 @@
     <AssemblyName>Trados.TargetRenamer</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17Beta</TradosFolder>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17Beta\Plugins</PluginDeploymentPath>
+		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17</TradosFolder>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17\Plugins</PluginDeploymentPath>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
