--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -98,6 +98,7 @@
 		<Reference Include="System.Core" />
 		<Reference Include="System.Drawing" />
 		<Reference Include="System.Net.Http" />
+		<Reference Include="System.Web" />
 		<Reference Include="System.Windows.Forms" />
 		<Reference Include="System.Data" />
 		<Reference Include="System.Xml" />
