--- a/InterpretBank/InterpretBank/InterpretBank.csproj
+++ b/InterpretBank/InterpretBank/InterpretBank.csproj
@@ -25,11 +25,14 @@
   <ItemGroup>
     <None Remove="Resources\AddTerm.ico" />
     <None Remove="Resources\AddTerm2.ico" />
+    <None Remove="Resources\ConfirmEdit.png" />
+    <None Remove="Resources\Edit.png" />
     <None Remove="Resources\EditIcon.ico" />
     <None Remove="Resources\Flag.png" />
     <None Remove="Resources\Glossary.png" />
     <None Remove="Resources\logo.ico" />
     <None Remove="Resources\logo.png" />
+    <None Remove="Resources\RejectEdit.png" />
     <None Remove="Resources\Tag.png" />
   </ItemGroup>
   <ItemGroup>
@@ -139,11 +142,13 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\AddTerm.ico" />
-    <Resource Include="Resources\EditIcon.ico" />
+    <Resource Include="Resources\ConfirmEdit.png" />
+    <Resource Include="Resources\Edit.png" />
     <Resource Include="Resources\Flag.png" />
     <Resource Include="Resources\Glossary.png" />
     <Resource Include="Resources\logo.ico" />
     <Resource Include="Resources\logo.png" />
+    <Resource Include="Resources\RejectEdit.png" />
     <Resource Include="Resources\Tag.png" />
   </ItemGroup>
   <ItemGroup>
