--- a/SDLDataProtectionSuite/SDLDataProtectionSuite/Sdl.Community.SdlDataProtectionSuite.csproj
+++ b/SDLDataProtectionSuite/SDLDataProtectionSuite/Sdl.Community.SdlDataProtectionSuite.csproj
@@ -31,7 +31,7 @@
       <HintPath>$(TradosFolder)\NLog.dll</HintPath>
     </Reference>
 		<Reference Include="DocumentFormat.OpenXml">
-			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\DocumentFormat.OpenXml.dll</HintPath>
+			<HintPath>$(TradosFolder)\DocumentFormat.OpenXml.dll</HintPath>
 		</Reference>
     <Reference Include="PresentationFramework.Aero" />
     <Reference Include="Sdl.Core.Globalization">
