--- a/TermExcelerator/Sdl.Community.TermExcelerator.Tests/Sdl.Community.TermExcelerator.Tests.csproj
+++ b/TermExcelerator/Sdl.Community.TermExcelerator.Tests/Sdl.Community.TermExcelerator.Tests.csproj
@@ -33,7 +33,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17</TradosFolder>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Sdl.Core.Globalization.Async">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
+    </Reference>
     <Reference Include="Sdl.Terminology.TerminologyProvider.Core">
       <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Terminology.TerminologyProvider.Core.dll</HintPath>
     </Reference>
