Fix references and version

--- a/ApplyStudioProjectTemplate/Sdl.Community.ApplyStudioProjectTemplate/Sdl.Community.ApplyStudioProjectTemplate.csproj
+++ b/ApplyStudioProjectTemplate/Sdl.Community.ApplyStudioProjectTemplate/Sdl.Community.ApplyStudioProjectTemplate.csproj
@@ -50,8 +50,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17beta</TradosFolder>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17beta\Plugins</PluginDeploymentPath>
+    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17</TradosFolder>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17\Plugins</PluginDeploymentPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
